--- a/16-markdown-preview/src/index.css
+++ b/16-markdown-preview/src/index.css
@@ -58,8 +58,8 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -166,9 +166,9 @@ Markdown
 }
 /* unique styles */
 img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
+  width: 55%;
+  height: 55%;
+  object-fit: contain;
 }
 blockquote {
   font-size: 2rem;
@@ -187,6 +187,6 @@ pre {
   display: inline-block;
   border-radius: var(--radius);
   padding: 1rem 2rem;
-  color: yellow;
-  margin-bottom: 1.5rem;
+  color: rgb(55, 247, 97);
+  margin-bottom: 0.15rem;
 }
